--- a/assets/stylesheets/components/_btn.scss
+++ b/assets/stylesheets/components/_btn.scss
@@ -24,7 +24,13 @@
   &:hover,
   &:focus {
     color: $white;
+    text-decoration: none;
+
     background: $primary;
+  }
+
+  + .btn {
+    margin-left: .5em;
   }
 }
 
