--- a/assets/stylesheets/components/_link.scss
+++ b/assets/stylesheets/components/_link.scss
@@ -13,6 +13,10 @@
     color: $primary;
     background: none;
   }
+
+  + .link {
+    margin-left: 1.4em;
+  }
 }
 
 .link--tiny {
